--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.6",
     "dotenv": "^16.4.5",
     "globals": "^15.6.0",
@@ -21,7 +23,8 @@
     "zod": "^3.23.8"
   },
   "dependencies": {
-    "fastify": "^4.28.0",
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
     "mysql2": "^3.10.1",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6"
